deployment/nwaku/bootstrap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bootstrap-1
  namespace: zerotesting
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/hostname
            operator: In
            values:
            - metal-01.he-eu-hel1.vacdst.misc
  containers:
  - name: bootstrap-container-1
    image: wakuorg/nwaku:wakunode_dst
    ports:
    - containerPort: 8545
    command:
      - sh
      - -c
      - /usr/bin/wakunode --relay=true --rpc-admin=true  --keep-alive=true --max-connections=250 --discv5-discovery=true --discv5-enr-auto-update=True --log-level=INFO --rpc-address=0.0.0.0 --metrics-server=True --metrics-server-address=0.0.0.0  --nat=extip:$IP --pubsub-topic="/waku/2/kubetopic"
---
apiVersion: v1
kind: Pod
metadata:
  name: bootstrap-2
  namespace: zerotesting
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/hostname
            operator: In
            values:
            - metal-01.he-eu-fsn1.vacdst.misc
  containers:
  - name: bootstrap-container
    image: wakuorg/nwaku:wakunode_dst
    ports:
    - containerPort: 8545
    command:
      - sh
      - -c
      - /usr/bin/wakunode --relay=true --rpc-admin=true  --keep-alive=true --max-connections=250 --discv5-discovery=true --discv5-enr-auto-update=True --log-level=INFO --rpc-address=0.0.0.0 --metrics-server=True --metrics-server-address=0.0.0.0  --nat=extip:$IP --pubsub-topic="/waku/2/kubetopic"
---
apiVersion: v1
kind: Pod
metadata:
  name: bootstrap-3
  namespace: zerotesting
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: kubernetes.io/hostname
            operator: In
            values:
            - metal-02.he-eu-hel1.vacdst.misc
  containers:
  - name: bootstrap-container
    image: wakuorg/nwaku:wakunode_dst
    ports:
    - containerPort: 8545
    command:
      - sh
      - -c
      - /usr/bin/wakunode --relay=true --rpc-admin=true  --keep-alive=true --max-connections=250 --discv5-discovery=true --discv5-enr-auto-update=True --log-level=INFO --rpc-address=0.0.0.0 --metrics-server=True --metrics-server-address=0.0.0.0  --nat=extip:$IP --pubsub-topic="/waku/2/kubetopic"
